adicionando os testes

--- a/generators/templates/component.test.tsx.hbs
+++ b/generators/templates/component.test.tsx.hbs
@@ -3,7 +3,7 @@ import { render } from "helpers/test-utils"
 import { {{pascalCase name}} } from "."
 
 describe("< {{pascalCase name}} />", () => {
-  it("should exist in the document", () => {
+  it("Should exist in the document", () => {
     render(< {{pascalCase name}} />)
     expect(screen.getByText(/plop/i)).toBeInTheDocument()
   })
